# poetry2nix-testing

./: .gitmodules  README.org  fix_heuristic.py  flake.nix  generate_probabilities_file.py  latest  merged_build_systems.json  minimal.top-pypi-packages-30-days.min.json  nix_develop_fail  nix_develop_fail_2  nix_develop_fail_commands  plot_script.gp  plot_script_slots.gp  poetry_add_fail  poetry_add_fail_2  pyproject.toml  script.sh  small.top-pypi-packages-30-days.min.json  small_nix_develop_fail_commands  top-pypi-packages-30-days.min.beautiful.json  twisted_dependencies.json  update_flake.sh  works
fail_logs/alabaster/: pyproject.toml
fail_logs/altair/: generate_altair_log.sh  pyproject.toml
fail_logs/analytics-python/: generate_analytics-python_log.sh  pyproject.toml
fail_logs/annoy/: generate_annoy_log.sh  pyproject.toml
fail_logs/apache-airflow-providers-cncf-kubernetes/: pyproject.toml
fail_logs/apache-airflow-providers-ftp/: pyproject.toml
fail_logs/apache-airflow-providers-google/: pyproject.toml
fail_logs/apache-airflow-providers-imap/: pyproject.toml
fail_logs/apache-airflow-providers-microsoft-mssql/: pyproject.toml
fail_logs/apache-airflow-providers-postgres/: pyproject.toml
fail_logs/apache-airflow-providers-sftp/: pyproject.toml
fail_logs/apache-airflow-providers-snowflake/: pyproject.toml
fail_logs/apache-airflow-providers-ssh/: pyproject.toml
fail_logs/apache-sedona/: generate_apache-sedona_log.sh  pyproject.toml
fail_logs/appium-python-client/: generate_appium-python-client_log.sh
fail_logs/argparse/: generate_argparse_log.sh
fail_logs/artifacts-keyring/: pyproject.toml
fail_logs/asyncache/: generate_asyncache_log.sh  pyproject.toml
fail_logs/atlassian-jwt-auth/: pyproject.toml
fail_logs/autocommand/: pyproject.toml
fail_logs/avro-gen/: generate_avro-gen_log.sh
fail_logs/avro-python3/: pyproject.toml
fail_logs/aws-kinesis-agg/: pyproject.toml
fail_logs/aws-psycopg2/: pyproject.toml
fail_logs/aws-requests-auth/: pyproject.toml
fail_logs/aws-sam-translator/: pyproject.toml
fail_logs/azure-ai-ml/: pyproject.toml
fail_logs/azure-functions/: pyproject.toml
fail_logs/azure-kusto-data/: pyproject.toml
fail_logs/azure-kusto-ingest/: pyproject.toml
fail_logs/azureml-dataprep/: pyproject.toml
fail_logs/boxsdk/: generate_boxsdk_log.sh  pyproject.toml
fail_logs/bs4/: generate_bs4_log.sh  pyproject.toml
fail_logs/bump2version/: generate_bump2version_log.sh  pyproject.toml
fail_logs/category-encoders/: pyproject.toml
fail_logs/cerberus-python-client/: generate_cerberus-python-client_log.sh
fail_logs/certbot-dns-google-domains/: pyproject.toml
fail_logs/clu/: pyproject.toml
fail_logs/dbt-redshift/: pyproject.toml
fail_logs/opencensus-ext-httplib/: pyproject.toml
fail_logs1/audioread/: pyproject.toml
fail_logs1/great-expectations/: pyproject.toml
fail_logs1/python-consul/: pyproject.toml
fail_logs1/tb-nightly/: pyproject.toml
fail_logs1/tfds-nightly/: pyproject.toml
fail_logs1/types-mock/: pyproject.toml
(+620 files in other folders)
