[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.3"
great-expectations = "^0.18.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
