[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.3"
tb-nightly = "^2.17.0a20240222"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
