[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "^1.26.3"
types-mock = "^5.1.0.20240106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
